Created temprorary unified downloader interface